United worker and occasion history saver

--- a/backend/Main.Service/Worker/Dockerfile
+++ b/backend/Main.Service/Worker/Dockerfile
@@ -1,8 +1,4 @@
-﻿FROM mcr.microsoft.com/dotnet/aspnet:8.0 AS base
-WORKDIR /app
-EXPOSE 80
-
-FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
+﻿FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
 
 WORKDIR /src
 RUN dotnet tool install --global dotnet-ef --version 7.0.12
@@ -14,17 +10,17 @@ COPY ["Main.Service/ChatConsumers", "Main.Service/ChatConsumers"]
 COPY ["SharedLibs/", "SharedLibs/"]
 COPY ["Balance.Microservice/protos/", "Balance.Microservice/protos/"]
 
-WORKDIR "/src/Main.Service/ChatConsumers"
+WORKDIR "/src/Main.Service/Worker"
 
-RUN dotnet restore "OccasionChatHistorySaver.csproj"
-RUN dotnet build "OccasionChatHistorySaver.csproj" -c Release -o /app/build
+RUN dotnet restore "Main.Service.Worker.csproj"
+RUN dotnet build "Main.Service.Worker.csproj" -c Release -o /app/build
 
 FROM build AS publish
-RUN dotnet publish "OccasionChatHistorySaver.csproj" -c Release -o /app/publish /p:UseAppHost=false
+RUN dotnet publish "Main.Service.Worker.csproj" -c Release -o /app/publish /p:UseAppHost=false
 
 FROM base AS final
 WORKDIR /app
 COPY --from=publish /app/publish .
-ENTRYPOINT ["dotnet", "OccasionChatHistorySaver.dll"]
+ENTRYPOINT ["dotnet", "Main.Service.Worker.dll"]
 
 
