--- a/backend/Main.Service/Worker/Main.Service.Worker.csproj
+++ b/backend/Main.Service/Worker/Main.Service.Worker.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
         <TargetFramework>net8.0</TargetFramework>
@@ -12,6 +12,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\Core\Domain\Domain.csproj" />
       <ProjectReference Include="..\Infrastructure\Migrations\Migrations.csproj" />
       <ProjectReference Include="..\Infrastructure\Persistence\Persistence.csproj" />
     </ItemGroup>
