--- a/backend/Main.Service/Worker/Properties/launchSettings.json
+++ b/backend/Main.Service/Worker/Properties/launchSettings.json
@@ -1,8 +1,8 @@
 {
   "profiles": {
-    "ChatConsumers": {
+    "Worker": {
       "commandName": "Project",
-      "launchBrowser": true,
+      "launchBrowser": false,
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
